@@ -6,6 +6,7 @@ Date: ????
     - Fixed a crash when attempting to remove a tape drawn by a player who no longer exists. (#43)
     - Fixed that it was possible to edit a temporary tape.
     - Fixed that tape labels were visible to all players.
+    - Fixed that data would not be cleaned up when a player was removed.
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.2
 Date: 2025-01-07
